# Noon

./: .env  .gitignore  ApiTest.http  CMakeLists.txt  LICENSE  Makefile  NOTE.md  README.md  TODO.todo  gen_certificates.sh  noon.config.lua
.misc/lua/src/: common.lua
app/: noon.config.lua  noon_cert.pem  server.crt  server.key
app/html/: 404.html  index.html  todo.html
app/libs/: hello.lua
app/libs/orm/: model.lua
app/libs/orm/class/: fields.lua  global.lua  property.lua  query.lua  query_list.lua  select.lua  table.lua
app/libs/orm/tools/: fields.lua  func.lua
app/middlewares/: hello.lua  world.lua
app/pages/: home.lua
app/routes/: _fallback.lua  home.lua  todo.lua
app/routes/api/: fetch.lua  hello.lua  middlewares.lua  orm.lua  post.lua  query.lua  todo.lua
app/static/: index.js  style.css  todo.js
include/: json.hpp
src/: App.cpp  App.h  CommonLuaExtensions.cpp  CommonLuaExtensions.h  Connection.cpp  Connection.h  Dusk.cpp  Dusk.h  DuskBackend.cpp  DuskBackend.h  DuskView.cpp  DuskView.h  HttpServer.cpp  HttpServer.h  ILuaExtension.cpp  ILuaExtension.h  KVStore.cpp  KVStore.h  Log.cpp  Log.h  LuaExt.cpp  LuaExt.h  Middlewares.cpp  Middlewares.h  Router.cpp  Router.h  RuntimeConfig.cpp  RuntimeConfig.h  SSLConnection.cpp  SSLConnection.h  ScriptContext.cpp  ScriptContext.h  ScriptEngine.cpp  ScriptEngine.h  Server.cpp  Server.h  SocketConnection.cpp  SocketConnection.h  StaticFile.cpp  StaticFile.h  (+4 more)
src/interfaces/: ILuaExtension.h  ISerializable.h
src/utils/: EventHandler.h
